--- a/css/style.css
+++ b/css/style.css
@@ -12,19 +12,8 @@ body {
   outline: none;
   border: none;
 }
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
-}
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
+
+
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -38,11 +27,16 @@ body {
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  background-color: #0d6dfd;
+  color: white;
+  border: 1px solid cyan;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
   border: 1px solid cyan;
+  background-color: white;
+  color: black;
 }
 .product-image {
   width: 150px;
