--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
   align-items: center;
   justify-content: center;
 }
+/* card section */
 .single-product {
   padding: 10px;
   transition: 0.6s;
@@ -38,10 +39,12 @@ body {
   background-color: white;
   color: black;
 }
+/* image section */
 .product-image {
   width: 150px;
   height: 150px;
 }
+/* cart section */
 .cart {
   width: 350px;
   /* border: 1px solid green; */
@@ -54,6 +57,7 @@ body {
 .cart-main {
   padding-right: 30px;
 }
+/* responsive */
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
